2006-03-13  Adam Fedor  <fedor@gnu.org>

	* Version 0.10.3

2006-03-13  Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/x11/XGServerWindow.m (-termwindow:): Reset the window
	cache, if it points to the terminated window.

2006-03-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/NSBezierPathCairo.m
	* Source/cairo/NSBezierPathCairo.h
	* Source/cairo/CairoDevice.m
	* Source/cairo/CairoFontManager.m
	* Source/cairo/CairoFreeTypeFontInfo.m
	* Headers/cairo/CairoDevice.m
	* Headers/cairo/CairoFontManager.m
	* Headers/cairo/CairoFreeTypeFontInfo.m:
	Removed these files.
	* Source/cairo/GNUmakefile:
	Removed references to obsolete files.
	* Source/cairo/CairoFontInfo.m (-setCacheSize:):
	Fill the cache with zeros.
	* Source/cairo/CairoFontInfo.m (-setupAttributes):
	Free the font options.
	* Source/cairo/CairoGState.m (:bezierPath, -GSSendBezierPath:):
	Added NSBezierPath methods. 	
	* Source/cairo/XGCairoXImageSurface.m
	* Source/cairo/CairoContext.m
	* Source/cairo/XGCairoSurface.m
	* Source/cairo/CairoSurface.m
	* Source/cairo/XGCairoGlitzSurface.m
	* Headers/cairo/CairoSurface.h:
	Clean up of cairo backend code.
	
2006-03-07  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-compositeGState:...fraction:,
	DPSimage::...:): Handle flipped views correctly.

2006-02-22 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/gsc/GSStreamContext.m: Fix opening of file on mingw32
	Don't log where we are printingf to unless debugging is on.

2006-02-13  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Handle more of the
	state parameters in copy.
	* Source/cairo/CairoGState.m (-compositerect:op:): Protect
	operator setting with save/restore.

2006-02-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-compositeGState:...fraction:): Deal
	with flipped views. Also some cleanup in the whole file and a hack
	to set alpha.

2006-02-11  Fred Kiefer <FredKiefer@gmx.de>
