@@ -1,3 +1,9 @@
+2006-03-12  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/cairo/XGCairoGlitzSurface.m
+	* Headers/cairo/XGCairoGlitzSurface.h:
+	Rewrote to fit with changed glitz interface.
+	
 2006-03-13  Adam Fedor  <fedor@gnu.org>
 
 	* Version 0.10.3
